syntax = "proto3";

package protomsg;

message SingleFieldIntArray {

	//The data holder of the message
	repeated int64 data = 1;
}
