syntax = "proto3";

package protomsg;

message SingleFieldStringArray {

	//The data holder of the message
	repeated string data = 1;
}
